--- a/style.css
+++ b/style.css
@@ -3,15 +3,48 @@
     padding: 0;
 
 }
+
 header{
     display: grid;
-    grid-template-columns: auto     1fr;
+    grid-template-columns: auto 1fr;
     align-items: center;
     background-color: rgb(153, 115, 71);
 }
 
+header > h1{
+    text-align: center;
+}
+
+ul.container{
+    background-color: aqua;
+    display: grid;
+    grid-template-columns: repeat(6, auto);
+    justify-content: start;
+    list-style: none;    
+    gap: 25px;
+}
+
+li{
+    margin: 2px;              /* tira qualquer margem nos itens */
+    padding: 0 0px;
+}
+
+
 img{
     width: 50px;
     height: 50px;
+}
+
+ul.ingredientes{
+    display: grid;
+    grid-template-rows: 100px;
+    grid-template-columns: repeat(1, auto);
+
+}
+img.cookie{
+    max-width: 50%;   
+    width: 40%;       
+    height: auto;      
+    display: block;    
 }
 
